force-app/main/default/objects/WorkOrder/fields/Actual_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_Date__c</fullName>
    <description>This field is used to store the actual date of inspection happended.</description>
    <label>Actual Date</label>
    <type>Date</type>
</CustomField>