force-app/main/default/objects/WorkOrder/fields/Asset_Receipt_Date__c.field-meta.xml
<CustomField>
    <fullName>Asset_Receipt_Date__c</fullName>
    <label>Asset Receipt Date</label>
    <type>Date</type>
</CustomField>