force-app/main/default/objects/WorkOrder/fields/Asset_Return_Date__c.field-meta.xml
<CustomField>
    <fullName>Asset_Return_Date__c</fullName>
    <label>Asset Return Date</label>
    <type>Date</type>
</CustomField>