force-app/main/default/objects/WorkOrder/fields/Close_Status__c.field-meta.xml
<CustomField>
    <fullName>Close_Status__c</fullName>
    <label>Close Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Repaired</fullName>
            </value>
            <value>
                <fullName>Unrepaired</fullName>
            </value>
            <value>
                <fullName>Calibrated</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>