force-app/main/default/objects/WorkOrder/fields/Customer_reference__c.field-meta.xml
<CustomField>
    <fullName>Customer_reference__c</fullName>
    <label>Customer reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>