force-app/main/default/objects/WorkOrder/fields/Final_Conclusion__c.field-meta.xml
<CustomField>
    <fullName>Final_Conclusion__c</fullName>
    <label>Final Conclusion</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>