force-app/main/default/objects/WorkOrder/fields/Final_Test__c.field-meta.xml
<CustomField>
    <fullName>Final_Test__c</fullName>
    <label>Final Test</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Final test successful</fullName>
            </value>
            <value>
                <fullName>Final test NOT successful</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>