force-app/main/default/objects/WorkOrder/fields/Inspection_Category__c.field-meta.xml
<CustomField>
    <fullName>Inspection_Category__c</fullName>
    <label>Inspection Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Periodic Inspection</fullName>
            </value>
            <value>
                <fullName>On-Spot</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>