force-app/main/default/objects/WorkOrder/fields/Inspection_Id__c.field-meta.xml
<CustomField>
    <fullName>Inspection_Id__c</fullName>
    <description>This field is used to store the servAir Inspection id in SFDC workorder</description>
    <label>Inspection Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>