force-app/main/default/objects/WorkOrder/fields/Internal_comments__c.field-meta.xml
<CustomField>
    <fullName>Internal_comments__c</fullName>
    <label>Internal comments</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>