force-app/main/default/objects/WorkOrder/fields/Internal_Repair_Number__c.field-meta.xml
<CustomField>
    <fullName>Internal_Repair_Number__c</fullName>
    <label>Internal Repair Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>