force-app/main/default/objects/WorkOrder/fields/PartsTotal__c.field-meta.xml
<CustomField>
    <fullName>PartsTotal__c</fullName>
    <label>Parts Total</label>
    <summarizedField>WorkOrderLineItem.Total__c</summarizedField>
    <summaryForeignKey>WorkOrderLineItem.WorkOrderId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>