force-app/main/default/objects/WorkOrder/fields/Planned_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Planned_End_Date__c</fullName>
    <label>Planned End Date</label>
    <type>Date</type>
</CustomField>