force-app/main/default/objects/WorkOrder/fields/Quote_required__c.field-meta.xml
<CustomField>
    <fullName>Quote_required__c</fullName>
    <label>Quote required?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>