force-app/main/default/objects/WorkOrder/fields/Sage_Case_Number__c.field-meta.xml
<CustomField>
    <fullName>Sage_Case_Number__c</fullName>
    <description>This field is for reference to the olf CRM system for historical purposes only</description>
    <inlineHelpText>This field is for reference to the olf CRM system for historical purposes only</inlineHelpText>
    <label>Sage Case Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>