force-app/main/default/objects/WorkOrder/fields/sCaseNotesInServiceRepor__c.field-meta.xml
<CustomField>
    <fullName>sCaseNotesInServiceRepor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Include Case Notes in the Service Report</label>
    <type>Checkbox</type>
</CustomField>