force-app/main/default/objects/WorkOrder/fields/Scheduled_Date__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Date__c</fullName>
    <description>This date is used to store the inspection scheduled date</description>
    <label>Scheduled Date</label>
    <type>Date</type>
</CustomField>