force-app/main/default/objects/WorkOrder/fields/ScheduledEndDate__c.field-meta.xml
<CustomField>
    <fullName>ScheduledEndDate__c</fullName>
    <label>Scheduled End Date</label>
    <type>DateTime</type>
</CustomField>