force-app/main/default/objects/WorkOrder/fields/Send_Case_Confirmation_Email__c.field-meta.xml
<CustomField>
    <fullName>Send_Case_Confirmation_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Case Confirmation Email</label>
    <type>Checkbox</type>
</CustomField>