force-app/main/default/objects/WorkOrder/fields/SerialNumber__c.field-meta.xml
<CustomField>
    <fullName>SerialNumber__c</fullName>
    <label>Serial Number</label>
    <length>225</length>
    <type>Text</type>
</CustomField>