force-app/main/default/objects/WorkOrder/fields/Service_Action_To_Be_Taken__c.field-meta.xml
<CustomField>
    <fullName>Service_Action_To_Be_Taken__c</fullName>
    <label>Service/Action To Be Taken</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>