force-app/main/default/objects/WorkOrder/fields/Service_provider__c.field-meta.xml
<CustomField>
    <fullName>Service_provider__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service provider</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Service provider</relationshipLabel>
    <relationshipName>Work_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>