force-app/main/default/objects/WorkOrder/fields/ServiceLocation__c.field-meta.xml
<CustomField>
    <fullName>ServiceLocation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Location</label>
    <referenceTo>Office__c</referenceTo>
    <relationshipLabel>Work Orders</relationshipLabel>
    <relationshipName>Work_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>