force-app/main/default/objects/WorkOrder/fields/ShippingEmail__c.field-meta.xml
<CustomField>
    <fullName>ShippingEmail__c</fullName>
    <label>Web Email</label>
    <type>Email</type>
</CustomField>