force-app/main/default/objects/WorkOrder/fields/Sub_status__c.field-meta.xml
<CustomField>
    <fullName>Sub_status__c</fullName>
    <label>Sub-Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Goods Receipt</fullName>
            </value>
            <value>
                <fullName>Waiting For Good</fullName>
            </value>
            <value>
                <fullName>Quoted</fullName>
            </value>
            <value>
                <fullName>PO Receipt</fullName>
            </value>
            <value>
                <fullName>Waiting for Parts</fullName>
            </value>
            <value>
                <fullName>Waiting for Third Party</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>