force-app/main/default/objects/WorkOrder/fields/SVO_Number__c.field-meta.xml
<CustomField>
    <fullName>SVO_Number__c</fullName>
    <label>SVO Number</label>
    <length>48</length>
    <type>Text</type>
</CustomField>