force-app/main/default/objects/WorkOrder/fields/Test_Specification__c.field-meta.xml
<CustomField>
    <fullName>Test_Specification__c</fullName>
    <label>Test Specification</label>
    <type>TextArea</type>
</CustomField>