force-app/main/default/objects/WorkOrder/fields/Version__c.field-meta.xml
<CustomField>
    <fullName>Version__c</fullName>
    <label>Version</label>
    <length>255</length>
    <type>Text</type>
</CustomField>