force-app/main/default/objects/WorkOrder/fields/Warranty_Granted__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Granted__c</fullName>
    <label>Warranty Granted</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>