force-app/main/default/objects/WorkOrder/fields/Web_Company__c.field-meta.xml
<CustomField>
    <fullName>Web_Company__c</fullName>
    <label>Web Company</label>
    <length>255</length>
    <type>Text</type>
</CustomField>