force-app/main/default/objects/WorkOrder/fields/Web_Name__c.field-meta.xml
<CustomField>
    <fullName>Web_Name__c</fullName>
    <label>Web Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>