force-app/main/default/objects/WorkOrder/fields/Web_Phone__c.field-meta.xml
<CustomField>
    <fullName>Web_Phone__c</fullName>
    <label>Web Phone</label>
    <length>40</length>
    <type>Text</type>
</CustomField>