force-app/main/default/objects/WorkOrder/fields/Work_Order_Currency__c.field-meta.xml
<CustomField>
    <fullName>Work_Order_Currency__c</fullName>
    <label>Work Order Currency</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>