force-app/main/default/objects/WorkOrder/fields/Work_Order_Notes__c.field-meta.xml
<CustomField>
    <fullName>Work_Order_Notes__c</fullName>
    <label>Work Order Notes</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>