force-app/main/default/objects/WorkOrder/fields/Work_Order_Origin__c.field-meta.xml
<CustomField>
    <fullName>Work_Order_Origin__c</fullName>
    <label>Work Order Origin</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Warehouse</fullName>
            </value>
            <value>
                <fullName>Web</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>