force-app/main/default/objects/WorkOrder/fields/WorkOrderType__c.field-meta.xml
<CustomField>
    <fullName>WorkOrderType__c</fullName>
    <description>Describes the type of the WO</description>
    <inlineHelpText>Describes the type of the WO</inlineHelpText>
    <label>Work Order Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Annual Maintenance</fullName>
            </value>
            <value>
                <fullName>Calibration</fullName>
            </value>
            <value>
                <fullName>Factory Calibration</fullName>
            </value>
            <value>
                <fullName>Factory Modification</fullName>
            </value>
            <value>
                <fullName>Factory Repair</fullName>
            </value>
            <value>
                <fullName>Factory Update</fullName>
            </value>
            <value>
                <fullName>Modification</fullName>
            </value>
            <value>
                <fullName>On-site Calibration</fullName>
            </value>
            <value>
                <fullName>On-site Modification</fullName>
            </value>
            <value>
                <fullName>On-site Repair</fullName>
            </value>
            <value>
                <fullName>On-site Update</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Periodical Check</fullName>
            </value>
            <value>
                <fullName>Repair</fullName>
            </value>
            <value>
                <fullName>Service Note</fullName>
            </value>
            <value>
                <fullName>Start-up</fullName>
            </value>
            <value>
                <fullName>Warranty Service</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>