force-app/main/default/objects/WorkOrder/fields/YGS_Sales_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>YGS_Sales_Order_Number__c</fullName>
    <label>YGS Sales Order Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>