force-app/main/default/objects/WorkOrder/recordTypes/IA.recordType-meta.xml
<RecordType>
    <fullName>IA</fullName>
    <active>true</active>
    <description>For Control System, Field instruments, Process Analyzer, Data Acquisition (DAQ) instruments, etc.</description>
    <label>IA</label>
</RecordType>