force-app/main/default/objects/WorkOrder/validationRules/YODA_UNCHECK_SEND_NOTI_CHECKBOX.validationRule-meta.xml
<ValidationRule>
    <fullName>YODA_UNCHECK_SEND_NOTI_CHECKBOX</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISCHANGED( Send_Case_Confirmation_Email__c ),Send_Case_Confirmation_Email__c = FALSE, NOT( $Setup.Bypass_Settings__c.Bypass_Validation_Rules__c )
)</errorConditionFormula>
    <errorDisplayField>Send_Case_Confirmation_Email__c</errorDisplayField>
    <errorMessage>Once checked, can&apos;t remove</errorMessage>
</ValidationRule>