force-app/main/default/objects/WorkOrder/listViews/All_WorkOrders.listView-meta.xml
<ListView>
    <fullName>All_WorkOrders</fullName>
    <columns>Name</columns>
    <columns>Account</columns>
    <columns>Asset</columns>
    <columns>Case</columns>
    <columns>Duration</columns>
    <columns>Entitlement</columns>
    <columns>TotalPrice</columns>
    <columns>Owner</columns>
    <columns>Priority</columns>
    <columns>Status</columns>
    <filterScope>Everything</filterScope>
    <label>All Work Orders</label>
</ListView>