force-app/main/default/objects/WorkOrder/listViews/My_WorkOrders.listView-meta.xml
<ListView>
    <fullName>My_WorkOrders</fullName>
    <columns>Name</columns>
    <columns>Subject</columns>
    <columns>Account</columns>
    <columns>Priority</columns>
    <columns>Contact</columns>
    <columns>Case</columns>
    <columns>Status</columns>
    <filterScope>Mine</filterScope>
    <label>My Work Orders</label>
</ListView>